--- a/etc/calamares/modules/mount.conf
+++ b/etc/calamares/modules/mount.conf
@@ -41,6 +41,8 @@ btrfsSubvolumes:
 mountOptions:
     - filesystem: default
       options: [ defaults, noatime, lazytime, data=ordered ]
+    - filesystem: ext4
+      options: [ defaults, noatime, lazytime, data=ordered ]
     - filesystem: efi
       options: [ defaults, umask=0077 ]
     - filesystem: btrfs
