--- a/etc/calamares/modules/initcpio.conf
+++ b/etc/calamares/modules/initcpio.conf
@@ -5,6 +5,6 @@
 # Run mkinitcpio(8) with the given preset value
 ---
 # This key defines the kernel to be loaded.
-kernel: linux-mainline
+kernel: linux-xanmod
 
 be_unsafe: false
